Various Java cleanups (#1087)
* Various Java cleanups

- Remove unused methods
- Javadoc cleanups
- Fix non constant log calls
- Fix typos

Signed-off-by: Mickael Maison <mickael.maison@gmail.com>

* Address feedback from Paolo

Signed-off-by: Mickael Maison <mickael.maison@gmail.com>

---------

Signed-off-by: Mickael Maison <mickael.maison@gmail.com>